[gd_scene load_steps=14 format=3 uid="uid://ddf6vsbhvrf"]

[ext_resource type="Script" path="res://Robots/HarvestingRobot/HarvestingRobot.gd" id="1_jlpvt"]
[ext_resource type="Resource" uid="uid://bj22gf230c1eh" path="res://Robots/HarvestingRobot/harvesting_robot_item.tres" id="2_yh3pa"]
[ext_resource type="SpriteFrames" uid="uid://chcp5qw6tyuew" path="res://Robots/HarvestingRobot/harvesting_robot_sprite_frames.tres" id="3_pjssa"]
[ext_resource type="Texture2D" uid="uid://b0e7iq0qo58q4" path="res://Robots/robot_track_particle.png" id="3_yovqt"]
[ext_resource type="Script" path="res://Robots/RobotAnimationController.gd" id="4_kvdie"]
[ext_resource type="Script" path="res://Robots/ProximityInteractor.gd" id="5_rak5r"]
[ext_resource type="Theme" uid="uid://c2bxfvlq30rpq" path="res://GUI/gui_theme.tres" id="6_jat5i"]
[ext_resource type="Script" path="res://Inventory/InventoryComponent.gd" id="7_xumjc"]

[sub_resource type="Curve" id="Curve_a8we4"]
max_value = 2.0
_data = [Vector2(0.0157233, 1.09091), 0.0, 0.0, 0, 0, Vector2(0.327044, 0.709091), 0.0, 0.0, 0, 0, Vector2(1, 0.236364), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_k8kxl"]
curve = SubResource("Curve_a8we4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5ymre"]
emission_shape = 1
emission_sphere_radius = 1.0
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 27.61
initial_velocity_max = 33.46
angular_velocity_min = 15.97
angular_velocity_max = 42.11
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_max = 1.56
scale_curve = SubResource("CurveTexture_k8kxl")
color = Color(0.521569, 0.466667, 0.521569, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_we5yd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_74qjm"]
radius = 41.0122

[node name="HarvestingRobot" type="CharacterBody2D" groups=["robot"]]
position = Vector2(496, 400)
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_jlpvt")
pickup_item = ExtResource("2_yh3pa")

[node name="WheelParticlesLeft" type="GPUParticles2D" parent="."]
position = Vector2(-12, -7)
emitting = false
process_material = SubResource("ParticleProcessMaterial_5ymre")
texture = ExtResource("3_yovqt")
lifetime = 0.4
explosiveness = 0.73

[node name="WheelParticlesRight" type="GPUParticles2D" parent="."]
position = Vector2(13, -6)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_5ymre")
texture = ExtResource("3_yovqt")
lifetime = 0.4

[node name="RobotAnimationController" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = ExtResource("3_pjssa")
animation = &"powered"
script = ExtResource("4_kvdie")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_we5yd")

[node name="ProximityInteractor" type="Area2D" parent="."]
collision_layer = 0
monitorable = false
script = ExtResource("5_rak5r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProximityInteractor"]
shape = SubResource("CircleShape2D_74qjm")
debug_color = Color(0.705882, 0.447059, 0.533333, 0.419608)

[node name="ProgressBar" type="ProgressBar" parent="ProximityInteractor"]
visible = false
offset_left = -14.0
offset_top = -38.0
offset_right = 16.0
offset_bottom = -28.0
theme = ExtResource("6_jat5i")
value = 47.9
show_percentage = false

[node name="ProduceInventory" type="Node" parent="."]
script = ExtResource("7_xumjc")
cheat_mode = false
